Add css styles for tablet and mobile
Add new breakpoints:
• @media only screen and (min-width: 768px) and (max-width: 1024px)
• @media only screen and (min-width: 320px) and (max-width: 480px)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <title>Fotomatic</title>
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
@@ -18,14 +20,23 @@
         <ul>
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
-          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./assets/images/instagram.png"></a></li>
+          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./assets/images/instagram.png" alt="Instagram"></a></li>
+        </ul>
+      </nav>
+      <a href="index.html" class="tablet logo">Fotomatic</a>
+      <nav class="tablet">
+        <ul>
+          <li><a href="#">Product detail</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./assets/images/instagram.png" alt="Instagram"></a></li>
+          <li><a href="#" class="button">Join us</a></li>
         </ul>
       </nav>
       <nav class="mobile">
         <ul>
-          <li><a href="#"><img src="./assets/images/ic-logo.svg"></a></li>
-          <li><a href="#"><img src="./assets/images/ic-product-detail.svg"></a></li>
-          <li><a href="#"><img src="./assets/images/ic-about-us.svg"></a></li>
+          <li><a href="#"><img src="./assets/images/ic-logo.svg" alt="Fotomatic"></a></li>
+          <li><a href="#"><img src="./assets/images/ic-product-detail.svg" alt="Product Detail"></a></li>
+          <li><a href="#"><img src="./assets/images/ic-about-us.svg" alt="About Us"></a></li>
           <li><a href="#" class="button">Join us</a></li>
         </ul>
       </nav>
@@ -58,7 +69,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="assets/images/feature-1.png" />
+            <img src="assets/images/feature-1.png" alt="Lens" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -69,7 +80,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="assets/images/feature-2.png" />
+            <img src="assets/images/feature-2.png" alt="Camera" />
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -87,16 +98,16 @@
       </div>
       <div class="images-container">
         <div class="image-container">
-          <img src="./assets/images/filter-1.png" />
+          <img src="./assets/images/filter-1.png" alt="Rose" />
         </div>
         <div class="image-container">
-          <img src="./assets/images/filter-2.png" />
+          <img src="./assets/images/filter-2.png" alt="Trees" />
         </div>
         <div class="image-container">
-          <img src="./assets/images/filter-3.png" />
+          <img src="./assets/images/filter-3.png" alt="Black and White" />
         </div>
         <div class="image-container extra">
-          <img src="./assets/images/filter-4.png" />
+          <img src="./assets/images/filter-4.png" alt="Landscape" />
         </div>
       </div>
     </div>
@@ -105,7 +116,7 @@
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
-        <img class="quote-citation" src="./assets/images/photography-logo.png" />
+        <img class="quote-citation" src="./assets/images/photography-logo.png" alt="Photography Society" />
       </div>
     </div>
 
